# archivindex-builder

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-090a2fb7df93955ed3c05f563b25a1d21e31b04bc82a1eb5135c8b6f648b2c72.json  query-100f71ca1dc56e0548b2fe983697d88086258c13431fdcad3ae7c9ccd827623e.json  query-2f53532ab2d0a2a214acefa382f9d46cef65bfbdc758dae4a1bed1f0db06912a.json  query-3c0eb12034d815622d31a320057f5c78361dfdcb47aa9c877ff9edd965314ff4.json  query-532bf61e2d652af39482790a5fefa32cf11effc57b78bbb89f8ff9134fb585e7.json  query-5f8bee48ef39cc4b47fc68791b22f7fdd766f7b4be8a5ef8dc72c19ab33c904a.json  query-6aa414811c13afe75bcfc36baed5f1d7c92ca587791d50d6a2269a45b0880561.json  query-7e504b9977f9b907f1c828dce964cfe933f76baed800985455c23110784ba83f.json  query-8e89e70523d6cdd4e11346dc6360c4a524c5deb381737674b6b73c94896ce606.json  query-8feb9a876958ace79bfb4878624ad433b1e8203f497ad613ea9ed058fe426a33.json  query-bd2e31a5bba5d617e83e4510529b26f5512cb8975c14ceebe190c4827161e477.json  query-c29d582178f05f6beed600c7563a2cd2ef3195336a7696f609a0ca962e4017a7.json  query-d8436fa20f8c876c854cf30c9f5f012a051eac65d7c8df57aa32425abaf73a79.json  query-f167add305d79bc5ae9632754f2bbb5023e36ce58d6973b021c5bab9256382a5.json
app/: package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: AibForm.tsx  App.tsx  Connector.ts  LoginStatus.tsx  index.scss  overrides.scss
auth/: Cargo.toml
auth-sqlx/: Cargo.toml
auth-sqlx/src/: lib.rs
cdx/: Cargo.toml
cdx-store/: Cargo.toml
cdx-store/src/: lib.rs
cdx/examples/: 1702374488385081.json
cdx/src/: client.rs  entry.rs  lib.rs  mime_type.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: digest.rs  entry.rs  lib.rs  redirect.rs  surt.rs  timestamp.rs
downloader/: Cargo.toml
downloader-cli/: Cargo.toml
downloader-cli/src/: main.rs
downloader/src/: lib.rs
extractor/: Cargo.toml
extractor/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: lib.rs  query.rs  schema.rs  snippet.rs
indexer/src/collector/: mod.rs  top_computer.rs  top_score_collector.rs
manager/: Cargo.toml
manager/migrations/: 20240114065223_state.down.sql  20240114065223_state.up.sql
manager/src/: lib.rs  search.rs
manager/src/db/: entry.rs  mod.rs  model.rs  pattern.rs  snapshot.rs  surt.rs
manager/src/import/: mod.rs
manager/src/model/: entry.rs  mod.rs  pattern.rs
redirects/: Cargo.toml
redirects/src/: lib.rs
service/: Cargo.toml
service/src/: error.rs  main.rs  result.rs  time.rs
service/src/auth/: callback.rs  login.rs  mod.rs
store/: Cargo.toml
store/src/: config.rs  lib.rs
store/src/items/: iter.rs  mod.rs
store/src/legacy/: mod.rs  wayback.rs
