[workspace]
resolver = "2"
members = [
    "core",
    "cdx",
    "cdx-store",
    "store",
    "downloader",
    "extractor",
    "indexer",
    "manager",
    "redirects",
    "auth",
    "auth-sqlx",
    "service",
    "downloader-cli",
    "cli"
]

[workspace.dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
cli-helpers = "0.1"
csv = "1"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.12"
lazy_static = "1"
log = "0.4"
once_cell = "1"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tempdir = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8", features = ["preserve_order"] }
url = "2"
zstd = "0.13"