[package]
name = "aib-auth"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
egg-mode = "0.16"
flagset = "0.4"
futures = { workspace = true }
openid = "0.12"
parking_lot = "0.12"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
