[package]
name = "aib-auth"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
egg-mode = "0.16"
flagset = "0.4"
futures = { workspace = true }
openid = "0.14"
parking_lot = "0.12"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
