[package]
name = "aib-cdx-store"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
cli-helpers = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
aib-core = { path = "../core/" }
aib-cdx = { path = "../cdx/" }
zstd = { workspace = true }