[package]
name = "aib-cli"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
chrono = { workspace = true }
cli-helpers = { workspace = true }
csv = { workspace = true }
flate2 = "1"
futures = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
aib-cdx = { path = "../cdx/" }
aib-cdx-store = { path = "../cdx-store/" }
aib-core = { path = "../core/" }
aib-indexer = { path = "../indexer/" }
aib-manager = { path = "../manager/" }
aib-store = { path = "../store/" }
zstd = { workspace = true }