[package]
name = "aib-cli"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
cli-helpers = { workspace = true }
csv = { workspace = true }
flate2 = "1"
futures = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
aib-cdx = { path = "../cdx/" }
aib-cdx-store = { path = "../cdx-store/" }
aib-core = { path = "../core/" }
aib-indexer = { path = "../indexer/" }
aib-manager = { path = "../manager/" }
aib-store = { path = "../store/" }
zstd = { workspace = true }