[package]
name = "aib-core"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
chrono = { workspace = true }
data-encoding = "2.3"
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha-1 = "0.10"
thiserror = { workspace = true }
url = { workspace = true }