[package]
name = "aib-core"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
data-encoding = "2.3"
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha-1 = "0.10"
thiserror = { workspace = true }
url = { workspace = true }