[package]
name = "aib-downloader-cli"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
cli-helpers = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
aib-core = { path = "../core/" }
aib-downloader = { path = "../downloader/" }