[package]
name = "aib-downloader-cli"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
cli-helpers = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
aib-core = { path = "../core/" }
aib-downloader = { path = "../downloader/" }