[package]
name = "aib-downloader"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio-retry = "0.3"
aib-core = { path = "../core/" }