[package]
name = "aib-extractor"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
chrono = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
thiserror = { workspace = true }
