[package]
name = "aib-extractor"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
thiserror = { workspace = true }
