[package]
name = "aib-indexer"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
chrono = { workspace = true }
html-escape = "0.2"
indexmap = { workspace = true }
md5 = "0.7"
once_cell = { workspace = true }
serde = { workspace = true }
tantivy = "0.22"
thiserror = { workspace = true }
aib-extractor = { path = "../extractor/" }
