[package]
name = "aib-indexer"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
html-escape = "0.2"
indexmap = { workspace = true }
md5 = "0.7"
once_cell = { workspace = true }
serde = { workspace = true }
tantivy = "0.22"
thiserror = { workspace = true }
aib-extractor = { path = "../extractor/" }
