[package]
name = "aib-manager"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
aib-cdx = { path = "../cdx/" }
aib-cdx-store = { path = "../cdx-store/" }
aib-core = { path = "../core/" }
aib-downloader = { path = "../downloader/" }
aib-extractor = { path = "../extractor/" }
aib-indexer = { path = "../indexer/" }
aib-store = { path = "../store/" }
chrono = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
