[package]
name = "aib-manager"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
aib-cdx = { path = "../cdx/" }
aib-cdx-store = { path = "../cdx-store/" }
aib-core = { path = "../core/" }
aib-downloader = { path = "../downloader/" }
aib-extractor = { path = "../extractor/" }
aib-indexer = { path = "../indexer/" }
aib-store = { path = "../store/" }
chrono = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
