[package]
name = "aib-redirects"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
cli-helpers = { workspace = true }
csv = { workspace = true }
data-encoding = "2.3"
flate2 = "1.0"
lazy_static = { workspace = true }
regex = { workspace = true }
sha-1 = "0.10"
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
aib-core = { path = "../core/" }
aib-downloader = { path = "../downloader/" }