[package]
name = "aib-redirects"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
cli-helpers = { workspace = true }
data-encoding = "2.3"
lazy_static = { workspace = true }
regex = { workspace = true }
sha-1 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
aib-core = { path = "../core/" }
aib-downloader = { path = "../downloader/" }
