[package]
name = "aib-service"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
aib-auth = { path = "../auth/" }
aib-auth-sqlx = { path = "../auth-sqlx/" }
aib-core = { path = "../core/" }
aib-indexer = { path = "../indexer/" }
aib-manager = { path = "../manager/" }
chrono = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6"
rocket_oauth2 = "0.5.0"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
