[package]
name = "aib-store"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex-builder"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
aib-core = { path = "../core/" }
bytes = "1.0"
chrono = { workspace = true }
cli-helpers = { workspace = true }
data-encoding = "2.3"
flate2 = "1"
futures = { workspace = true }
itertools = "0.12"
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-test = "0.4"
toml = { workspace = true }
zstd = { workspace = true }