[package]
name = "aib-store"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
aib-core = { path = "../core/" }
bytes = "1.0"
chrono = { workspace = true }
cli-helpers = { workspace = true }
data-encoding = "2.3"
flate2 = "1"
futures = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
toml = { workspace = true }
